--- a/BayBoon/.classpath
+++ b/BayBoon/.classpath
@@ -32,7 +32,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="F:/SELENIUM/selenium-server-standalone-3.0.1.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="E:/seleinium_software/selenium/selenium-server-standalone-3.0.0-beta2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
